--- a/kaisenweb/src/main/resources/application.properties
+++ b/kaisenweb/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+themoviedb.api-url=https://api.themoviedb.org
+themoviedb.api-version=3
+themoviedb.language=it-IT
+themoviedb.region=it
 
+spring.config.import=optional:credential.properties
