--- a/kaisenweb/pom.xml
+++ b/kaisenweb/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
