--- a/kaisenweb/src/main/resources/application.properties
+++ b/kaisenweb/src/main/resources/application.properties
@@ -2,5 +2,4 @@ themoviedb.api-url=https://api.themoviedb.org
 themoviedb.api-version=3
 themoviedb.language=it-IT
 themoviedb.region=it
-
-spring.config.import=optional:credential.properties
+themoviedb.api-key=be4219b3a8a1a1c28bd58860d75ad530
