--- a/kaisenweb/src/main/resources/application.properties
+++ b/kaisenweb/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
+
+#for Spring Boot 2.0
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
 themoviedb.api-url=https://api.themoviedb.org
 themoviedb.api-version=3
 themoviedb.language=it-IT
