--- a/kaisenweb/src/main/resources/application.properties
+++ b/kaisenweb/src/main/resources/application.properties
@@ -8,3 +8,12 @@ themoviedb.api-version=3
 themoviedb.language=it-IT
 themoviedb.region=it
 themoviedb.api-key=be4219b3a8a1a1c28bd58860d75ad530
+
+# Enable response compression
+server.compression.enabled=true
+
+# The comma-separated list of mime types that should be compressed
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
