--- a/kaisenweb/src/main/resources/application.properties
+++ b/kaisenweb/src/main/resources/application.properties
@@ -17,3 +17,29 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 
 # Compress the response only if the response size is at least 1KB
 server.compression.min-response-size=1024
+
+# Enable HTTP/2 support, if the current environment supports it
+server.http2.enabled=true
+
+# Maximum time the response should be cached (in seconds) 
+spring.resources.cache.cachecontrol.max-age=120
+
+# The cache must re-validate stale resources with the server. Any expired resources must not be used without re-validating.
+spring.resources.cache.cachecontrol.must-revalidate=true
+
+spring.resources.cache.cachecontrol.cache-private= true 
+
+# The resources are public and any cache may store the response.
+spring.resources.cache.cachecontrol.cache-public=false
+
+# Write files to disk if the file size is more than 2KB.
+spring.servlet.multipart.file-size-threshold=2KB
+
+# The intermediate disk location where the uploaded files are written
+spring.servlet.multipart.location=/tmp
+
+# Maximum file size that can be uploaded
+spring.servlet.multipart.max-file-size=50MB
+
+# Maximum allowed multipart request size
+spring.servlet.multipart.max-request-size=75MB
